ncc/testsuite/positive/nested-types-and-using.n
using System.ComponentModel.TypeConverter;
using SC = System.Console;

module K {
  Main () : void
  {
    def _ = StandardValuesCollection(null);
    SC.WriteLine ("ba");
  }
}
