ncc/testsuite/negative/Issue-git-145.n
variant Test
{
  | Foo
  | Bar
}

module Program
{
  Main() : void
  {
    def fn(val : Test)
    {
      match (val)
      {
        | Foo => fn(null)
        | _ => val
      }
    }
    _ = match (fn(null))
    {
      | Test.Foo => w; // E: unbound name
      | _ => ""; // W: this match clause is unused
    }
  }
}
